<resources>
    <string name="app_name">Home Irrigation Client</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="text_ok">OK</string>
    <string name="text_edit">Edit</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="text_devices">Devices</string>
    <string name="text_add">Add</string>
    <string name="text_name">Name:</string>
    <string name="text_port">Port:</string>
    <string name="text_mode">Mode:</string>
    <string name="text_device_add">Add a new device</string>
    <string name="text_address">Address:</string>
    <string name="text_basic_info">Basic Information</string>
    <string name="text_edit_basic_info">Edit Basic Info</string>
    <string name="text_host">Host</string>
    <string name="text_done">Done</string>
    <string name="text_watering_now">Watering Now</string>
    <string name="title_about">About</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_statistics">Statistics</string>
    <string name="text_edit_mode">Edit Mode</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- Strings used for fragments for navigation -->

    <!-- TODO: Remove or change this placeholder text -->
</resources>