<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.home.DeviceAddActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_device_add"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/text_device_add"
        android:background="?android:attr/windowBackground"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/textView_device_add_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_device_add"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/text_name"/>

    <EditText
        android:id="@+id/editText_device_add_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/textView_device_add_name"
        app:layout_constraintBaseline_toBaselineOf="@id/textView_device_add_name"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:inputType="text"
        android:text="" />

    <TextView
        android:id="@+id/textView_ip_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/textView_device_add_name"
        app:layout_constraintTop_toBottomOf="@id/textView_device_add_name"
        android:layout_marginTop="30dp"
        android:text="@string/text_host"/>

    <EditText
        android:id="@+id/editText_ip_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/textView_ip_address"
        app:layout_constraintBaseline_toBaselineOf="@id/textView_ip_address"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:inputType="text"
        android:text="" />

    <TextView
        android:id="@+id/textView_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textView_ip_address"
        app:layout_constraintStart_toStartOf="@id/textView_device_add_name"
        android:layout_marginTop="30dp"
        android:text="@string/text_port" />

    <EditText
        android:id="@+id/editText_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/textView_port"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_port"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:inputType="text"
        android:text="" />

    <Button
        android:id="@+id/button_device_add_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/text_ok" />

</androidx.constraintlayout.widget.ConstraintLayout>