<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize"
    tools:context=".ui.main.home.HomeFragment">

    <TextView
        android:id="@+id/textView_devices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/text_devices" />

    <Button
        android:id="@+id/button_add_devices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/textView_devices"
        app:layout_constraintStart_toEndOf="@id/textView_devices"
        android:layout_marginStart="50dp"
        android:text="@string/text_add"/>

    <Button
        android:id="@+id/button_edit_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_add_devices"
        app:layout_constraintStart_toEndOf="@id/button_add_devices"
        android:layout_marginStart="20dp"
        android:text="@string/text_edit"/>


    <GridView
        android:id="@+id/gridView_device_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textView_devices"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:numColumns="2">
    </GridView>

</androidx.constraintlayout.widget.ConstraintLayout>