<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize"
    tools:context=".ui.machine.dashboard.DashboardFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_basic_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:id="@+id/dashboard_basic_info_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/text_basic_info"/>

        <Button
            android:id="@+id/button_dashboard_basic_info_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/dashboard_basic_info_tag"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:text="@string/text_edit"/>

        <TextView
            android:id="@+id/dashboard_name_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/dashboard_basic_info_tag"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/text_name"/>

        <TextView
            android:id="@+id/textView_dashboard_name_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/dashboard_name_tag"
            app:layout_constraintStart_toEndOf="@+id/dashboard_name_tag"
            android:layout_marginStart="5dp"/>

        <TextView
            android:id="@+id/dashboard_host_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/dashboard_name_tag"
            app:layout_constraintStart_toStartOf="@+id/dashboard_name_tag"
            android:layout_marginTop="20dp"
            android:text="@string/text_address"/>

        <TextView
            android:id="@+id/textView_dashboard_host_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/dashboard_host_tag"
            app:layout_constraintBottom_toBottomOf="@id/dashboard_host_tag"
            android:layout_marginStart="5dp"/>

        <TextView
            android:id="@+id/dashboard_port_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/dashboard_host_tag"
            app:layout_constraintStart_toStartOf="@+id/dashboard_host_tag"
            android:layout_marginTop="20dp"
            android:text="@string/text_port"/>

        <TextView
            android:id="@+id/textView_dashboard_port_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/dashboard_port_tag"
            app:layout_constraintBottom_toBottomOf="@id/dashboard_port_tag"
            android:layout_marginStart="5dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout_basic_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:id="@+id/dashboard_mode_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/text_mode"/>

        <TextView
            android:id="@+id/textView_dashboard_mode_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/dashboard_mode_tag"
            app:layout_constraintStart_toEndOf="@id/dashboard_mode_tag"
            android:layout_marginStart="5dp"
            android:text=""/>

        <Button
            android:id="@+id/button_dashboard_mode_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/dashboard_mode_tag"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:text="@string/text_edit"/>

        <TextView
            android:id="@+id/textView_dashboard_water_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/dashboard_mode_tag"
            app:layout_constraintTop_toBottomOf="@id/dashboard_mode_tag"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/textView_dashboard_scheduled_freq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/dashboard_mode_tag"
            app:layout_constraintTop_toBottomOf="@id/textView_dashboard_water_amount"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/textView_dashboard_scheduled_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/dashboard_mode_tag"
            app:layout_constraintTop_toBottomOf="@+id/textView_dashboard_scheduled_freq"
            android:layout_marginTop="20dp"
            android:text=""/>

        <Button
            android:id="@+id/button_dashboard_watering_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/dashboard_mode_tag"
            app:layout_constraintTop_toBottomOf="@+id/textView_dashboard_scheduled_time"
            android:layout_marginTop="20dp"
            android:text="@string/text_watering_now"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>